adding series endpoint
